--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 <body style="background-color: rgb(55, 55, 55); color: blanchedAlmond">
   <h1>Astronaut Anatomy</h1>
   <hr>
+  <h2>Total astronauts selected by NASA since 2004:</h2>
+  <h3 id="astronaut_count"></h3>
   <h2>Average astronaut age:</h2>
   <h3 id="age_all_groups">-1</h3>
   <h2>Average astronaut age by group:</h2>
   <h3 id="age_by_group">-1</h3>
 
-  <p id="data">hi</p>
+  <!-- <p id="data">hi</p> -->
 </body>
   <script src="data.js"></script>
   <script src="age.js"></script>
