add average_age field to astro data

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <title>Astronaut Analysis</title>
  <style>
   body {
-    text-align: center;
+    /* text-align: center; */
   }
  </style>
 </head>
