add summary for degree and military experiences. display all groups' info...

--- a/index.html
+++ b/index.html
@@ -13,14 +13,22 @@
   <hr>
   <h2>Total astronauts selected by NASA since 2004:</h2>
   <h3 id="astronaut_count"></h3>
+  <h2>Degree Distribution</h2>
+  <h3 id="degree_counts"></h3>
+  <h2>Military Distribution</h2>
+  <h3 id="military_counts"></h3>
   <h2>Average astronaut age:</h2>
   <h3 id="age_all_groups">-1</h3>
   <h2>Average astronaut age by group:</h2>
   <h3 id="age_by_group">-1</h3>
 
-  <!-- <p id="data">hi</p> -->
+  <hr>
+  <h2>Group info</h2>
+  <div id="groups_info">put group info here!</div>
 </body>
   <script src="data.js"></script>
   <script src="age.js"></script>
   <script src="loader.js"></script>
+  <script src="stats.js"></script>
+  <script src="groups_display.js"></script>
 </html>
