Display applicant count per group (if present)

--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 <head>
- <title>Astronaut Analysis</title>
+ <title>Astronaut Anatomy</title>
  <style>
   body {
+    font-family: 'Times New Roman', Times, serif;
     /* text-align: center; */
   }
  </style>
@@ -11,16 +12,16 @@
 <body style="background-color: rgb(55, 55, 55); color: blanchedAlmond">
   <h1>Astronaut Anatomy</h1>
   <hr>
-  <h2>Total astronauts selected by NASA since 2004:</h2>
-  <h3 id="astronaut_count"></h3>
-  <h2>Degree Distribution</h2>
-  <h3 id="degree_counts"></h3>
-  <h2>Military Distribution</h2>
-  <h3 id="military_counts"></h3>
-  <h2>Average astronaut age:</h2>
-  <h3 id="age_all_groups">-1</h3>
-  <h2>Average astronaut age by group:</h2>
-  <h3 id="age_by_group">-1</h3>
+  <p>Total astronauts selected by NASA since 2004:</p>
+  <p id="astronaut_count"></p>
+  <p>Degree Distribution</p>
+  <p id="degree_counts"></p>
+  <p>Military Distribution</p>
+  <p id="military_counts"></p>
+  <p>Average astronaut age:</p>
+  <p id="age_all_groups">-1</p>
+  <p>Average astronaut age by group:</p>
+  <p id="age_by_group">-1</p>
 
   <hr>
   <h2>Group info</h2>
