set colors to B&W  for now

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <link rel="stylesheet" href="stylesheet.css">
 </head>
 
-<body style="background-color: rgb(55, 55, 55); color: blanchedAlmond">
+<body>
   <h1>Astronaut Anatomy | <em>What does it take to go to space?</em></h1>
   <hr>
   <h3 style="color:red;">NOTE TO ALL ASTRONAUT PROSPECTS:<br>This presentation describes <em>selected</em> astronauts, not applicants.
