filter groups by military/civilian status

--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
 
   <hr>
   <h2>Group info</h2>
+  <h3>Filter</h3>
+  <label>
+    Military:
+    <select id="military_filter">
+      <option value="all">All</option>
+      <option value="military">Military Only</option>
+      <option value="civilian">Civilian Only</option>
+    </select>
+  </label>
   <div id="groups_info">put group info here!</div>
 </body>
   <script src="data.js"></script>
