Show college on new line for readability

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <h1>Astronaut Anatomy | <em>What does it take to go to space?</em></h1>
   <hr>
   <h3 style="color:red;">NOTE TO ALL ASTRONAUT PROSPECTS:<br>This presentation describes <em>selected</em> astronauts, not applicants.
-    Copying surface traits without replicating underlying 
-    skillsets, responsibilities, successes...is unlikely to help.</h3>
+    <br>These are "trends" of a successful applicants. Not to be mistaken as a "template" for future success.</h3>
   <hr>
   <h3>Total astronauts selected by NASA since 2004:</h3>
   <p id="astronaut_count"></p>
