Added filter for highest_degree_earned

--- a/index.html
+++ b/index.html
@@ -34,6 +34,23 @@
       <option value="civilian">Civilian Only</option>
     </select>
   </label>
+  <br>
+  <label>
+    Highest degree earned:
+    <select id="degree_filter">
+      <option value="all">All</option>
+      <option value="PhD">PhD</option>
+      <option value="MD">MD</option>
+      <option value="MS">MS</option>
+      <option value="MEd">MEd</option>
+      <option value="MPhil">MPhil</option>
+      <option value="MSc">MSc</option>
+      <option value="MPH">MPH</option>
+      <option value="EMPA">EMPA</option>
+      <option value="BS">BS</option>
+      <option value="BEng">BEng</option>
+    </select>
+  </label>
   <div id="groups_info">put group info here!</div>
 </body>
   <script src="data.js"></script>
