add cool bar graph showing degrees earned

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <h3 style="color:red;">NOTE TO ALL ASTRONAUT PROSPECTS:<br>This presentation describes <em>selected</em> astronauts, not applicants.
     <br>These are "trends" of a successful applicants. Not to be mistaken as a "template" for future success.</h3>
   <hr>
+
+  <canvas id="degreeChart" width="600" height="400"></canvas>
+
   <h3>Total astronauts selected by NASA since 2004:</h3>
   <p id="astronaut_count"></p>
   <h3>Degree Distribution</h3>
@@ -57,6 +60,7 @@
   <script src="age.js"></script>
   <script src="education.js"></script>
   <script src="military.js"></script>
+  <script src="degreeChart.js"></script>
   <script src="loader.js"></script>
   <script src="groups_display.js"></script>
 </html>
