fix ui formatting

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <p id="military_counts"></p>
   <h3>Average astronaut age:</h3>
   <p id="age_all_groups">-1</p>
-  <h3>Average astronaut age by group:</p>
+  <h3>Average astronaut age by group:</h3>
   <p id="age_by_group">-1</p>
 
   <hr>
