Bar chart updates when filters change

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <pre>
       Org: NASA
       Total astronauts: 69
+      Applications submitted (known): 44,600
       Average age: 36.5
       % Military: 57% (39)
       Most common degree: 36 MS
@@ -38,11 +39,10 @@
  
   
   <h2>Data Explorer</h2>
-  <canvas id="degreeChart"></canvas>
-  <p id="degree_counts"></p>
+  <!-- <p id="degree_counts"></p> -->
   
-  <h3>Military Distribution</h3>
-  <p id="military_counts"></p>
+  <!-- <h3>Military Distribution</h3>
+  <p id="military_counts"></p> -->
 
   <div id="filters">
     <h3>Filter</h3>
@@ -73,7 +73,8 @@
       </label>
   </div>
 
-  <hr>
+  <canvas id="degreeChart"></canvas>
+
   <h2>Group info</h2>
   
   <div id="groups_info">put group info here!</div>
@@ -82,7 +83,7 @@
   <script src="age.js"></script>
   <script src="education.js"></script>
   <script src="military.js"></script>
-  <script src="degreeChart.js"></script>
   <script src="loader.js"></script>
   <script src="groups_display.js"></script>
+  <script src="degreeChart.js"></script>
 </html>
