--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <br>These are "trends" of successful applicants, not necessarily a "template" for future success.
     <br>Think of this tool as a casual reference rather than a career guide.
   </h3>
+  <em>
+    <a href="https://github.com/mrvivacious/astronaut-anatomy" target="_blank">
+      Source code</a>.
+     Questions? Ideas? Open an issue, or message my Instagram @mrvivacious.
+  </em>
   <hr>
 
   <div id="key_metrics">
@@ -37,15 +42,16 @@
     <p id="astronaut_count"></p> -->
   </div>
  
+  <hr>
   
-  <h2>Data Explorer</h2>
+  <h1>Data Explorer</h1>
   <!-- <p id="degree_counts"></p> -->
   
   <!-- <h3>Military Distribution</h3>
   <p id="military_counts"></p> -->
 
   <div id="filters">
-    <h3>Filter</h3>
+    <h2>Filter</h2>
       <label>
         Military:
         <select id="military_filter">
